# tsjs

./: .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .zen_cache  CONTRIBUTING.md  INSTALL.md  README.md  approach.md  bunfig.toml  git-flow.md  inspect_native.js  installation.md  monorepo.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.md  read.md  structure.md  temp  tsconfig.json  turbo.json  zen  zenbox
apps/frameworks/: package.json
apps/knowledge/: trace.txt
apps/learning-lab/: package.json  tsconfig.json
apps/zen-tui/native/: Cargo.toml  package.json
apps/zen-tui/native/.cargo/: config.toml
apps/zen-tui/native/src/: lib.rs
apps/zen-tui/native/src/runtime/: input.rs  layout.rs  mod.rs  output_buffer.rs  process_supervisor.rs  renderer.rs  resource_scope.rs
apps/zentui-host/: Cargo.toml
apps/zentui-host/src/: main.rs
decorator-examples/: class-decorator.md  meta-programming.md  read.md
docs/: zen-renderer-proposal.md
downloader/: at-backend.ts  package-lock.json  package.json  test.ts
ion-validation/: package-lock.json  package.json  read.md  tsconfig.json  turbo.json
joi-enhancer/: .eslintrc.js  .prettierignore  README.md  advanced.ts  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json  usage-examples.md  withCustomValidator.md
src/: app.ts  example.js
tooling/: verify-story.ts  zen-jsx-plugin.ts
v8_libuv_deep_dive/: 01_v8_hidden_classes.md  02_libuv_event_loop.md  03_cpp_boundary.md  event_loop_demo.js  jit_deopt_demo.js  serialization_cost_demo.js
(+1001 files in other folders)
