[package]
name = "zentui-host"
version = "0.1.0"
edition = "2021"

[dependencies]
rquickjs = { version = "0.6", features = ["macro", "classes", "array-buffer"] }
crossterm = "0.27"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = { version = "0.18", default-features = false }
chrono = "0.4"
