[package]
authors = ["Pallab Codes"]
edition = "2021"
name = "zen_tui_native"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
git2 = "0.18.1"
crossterm = "0.27.0"
taffy = "0.6"

[build-dependencies]
napi-build = "2.0.1"
